<resources>
    <string name="website_uri" translatable="false">http://com.whirlwind-studios.org</string>
    <string name="patreon_uri" translatable="false">https://www.patreon.com/school1</string>
    <string name="mail_uri" translatable="false">mailto:com.whirlwind.devstudios@gmail.com</string>
    <string name="market_uri" translatable="false">market://details?id=com.whirlwind.school1</string>
    <string name="play_store_uri" translatable="false">https://play.google.com/store/apps/details?id=com.whirlwind.school1</string>
    <string name="title_task_list">Tasks</string>
    <string name="title_appointment_list">Appointments</string>
    <string name="title_course_list">Courses</string>
    <string name="title_lesson_list">Timetable</string>
    <string name="title_account_user">User</string>
    <string name="title_account_school">School</string>
    <string name="title_school_signup">Sign up your school</string>
    <string name="title_signin_chooser">Chooser</string>
    <string name="title_signin_email">Email</string>
    <string name="title_signin_google">Google</string>
    <string name="title_signin_facebook">Facebook</string>
    <string name="title_config_task_activity">Task</string>
    <string name="title_config_appointment_activity">Appointment</string>
    <string name="title_enter_course">Enter course</string>
    <string name="section_title_today">Today</string>
    <string name="section_title_tomorrow">Tomorrow</string>
    <string name="section_title_weekend">Weekend</string>
    <string name="section_title_this_week">This week</string>
    <string name="section_title_next_week">Next week</string>
    <string name="section_title_remaining">Remaining</string>
    <string name="sevtion_title_undefined">Until the end of the universe</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_finish">Finish</string>
    <string name="action_timetable">Timetable</string>
    <string name="action_account">Account</string>
    <string name="action_logout">Logout</string>
    <string name="action_share">Share</string>
    <string name="action_admin">Admin</string>
    <string name="action_search">Search</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_ideas">Ideas</string>
    <string name="action_courses">Courses</string>
    <string name="action_config_timetable">Your timetable</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="text_task_completed_button">Completed</string>
    <string name="text_task_incomplete_button">Incomplete</string>
    <string name="text_cancel_button">Cancel</string>
    <string name="text_ok_button">OK</string>
    <string name="text_confirm_button">Confirm</string>
    <string name="text_save_button">Save</string>
    <string name="text_signin_button">Sign in</string>
    <string name="text_signup_button">Sign up</string>
    <string name="text_create_button">Create</string>
    <string name="text_enter_participant_button">Enter as participant</string>
    <string name="text_enter_admin_button">Enter as admin</string>
    <string name="text_course_enter_button">Enter</string>
    <string name="text_has_account_button">I already have an account</string>
    <string name="text_sign_in_button">Sign in</string>
    <string name="text_sign_in_google_button">Sign in with Google</string>
    <string name="text_sign_in_facebook_button">Sign in with Facebook</string>
    <string name="text_sign_in_anonymous_button">Sign in anonymously</string>
    <string name="text_sign_out_button">Sign out</string>
    <string name="text_create_account_button">Create account</string>
    <string name="text_verify_email_button">Verify email</string>
    <string name="text_disconnect_button">Disconnect</string>
    <string name="settings_category_general">General</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_summary_notifications">Notifications remind you not to forget that evil school</string>
    <string name="settings_title_hide_completed">Hide completed</string>
    <string name="settings_summary_hide_completed">When you finish a task, it will disappear to help you focus on what still needs to be completed</string>
    <string name="settings_title_share_default">Default \"Share\" value</string>
    <string name="settings_summary_share_default">Change the default \"Share\" value for new tasks and appointments</string>
    <string name="settings_category_developer">Developer options</string>
    <string name="settings_title_verbose">Verbose popups</string>
    <string name="settings_summary_verbose">Activate this option, if you always want to know what\'s currently going on</string>
    <string name="settings_developer_show_notifications_title">Show notifications</string>
    <string name="settings_developer_show_notifications_summary">If you just want to have reminders or just want to test if they work correctly, press this button</string>
    <string name="hint_subject_input">Subject</string>
    <string name="hint_description_input">Description</string>
    <string name="hint_email_input">Email</string>
    <string name="hint_school_name_input">Name of your school</string>
    <string name="hint_course_name_input">Name of the course/class</string>
    <string name="hint_password_input">Password</string>
    <string name="hint_confirm_password_input">Confirm password</string>
    <string name="hint_course_name_config_input">Name of the course/class</string>
    <string name="hint_lesson_subject_config_input">Subject</string>
    <string name="hint_school_password">"Your school's password"</string>
    <string name="message_course_participant">Course participant</string>
    <string name="message_course_admin">Course admin</string>
    <string name="message_nothing_due">Nothing to do here. Enjoy!</string>
    <string name="message_task_popup">"\nTo be completed until "</string>
    <string name="message_starting_from">"Starting from "</string>
    <string name="message_appointment_popup">" on "</string>
    <string name="message_task_share">"(until "</string>
    <string name="message_appointment_share">"(on "</string>
    <string name="message_course_popup_participant">You\'re logged in as a course participant</string>
    <string name="message_course_popup_admin">"Because you\'re logged in the course\'s admin, here\'s its password: "</string>
    <string name="message_date_today">"Today, "</string>
    <string name="message_date_tomorrow">"Tomorrow"</string>
    <string name="message_date_this_week">This week</string>
    <string name="message_date_next_week">Next week</string>
    <string name="message_this_weekend">This weekend</string>
    <string name="message_lesson_config_popup">". lesson on "</string>
    <string name="message_lesson_config_popup_break">"Lunch break on "</string>
    <string name="message_task_due">Task due tomorrow</string>
    <string name="message_x_tasks_due">" tasks due tomorrow"</string>
    <string name="message_appointment_due">Appointment tomorrow</string>
    <string name="message_x_appointments_due">" appointments tomorrow"</string>
    <string name="message_no_school">"You're not logged into a school"</string>
    <string name="message_no_courses">"You aren't logged into any courses"</string>
    <string name="message_school_sign_up">Sign up your school!</string>
    <string name="message_open_me">Open me!</string>
    <string name="popup_signin_queued">Signing in&#8230;</string>
    <string name="popup_signin_completed">Successfully signed in</string>
    <string name="popup_signup_queued">Signing up&#8230;</string>
    <string name="popup_signup_completed">Successfully signed up</string>
    <string name="popup_login_school_queued">Logging into school&#8230;</string>
    <string name="popup_login_school_completed">Successfully logged into school!</string>
    <string name="popup_login_course_queued">Logging into course&#8230;</string>
    <string name="popup_login_course_completed">Successfully logged into course!</string>
    <string name="popup_sync_schools_queued">Receiving school data</string>
    <string name="popup_sync_courses_queued">Receiving course data&#8230;</string>
    <string name="popup_sync_userCourses_queued">Receiving user data</string>
    <string name="popup_sync_schools_completed">Received all schools\' data</string>
    <string name="popup_sync_courses_completed">Received all courses\' data</string>
    <string name="popup_sync_userCourses_completed">Received all user data</string>
    <string name="popup_sync_events_queued">Syncing tasks and appointments</string>
    <string name="popup_sync_events_completed">Successfully synced tasks and appointments</string>
    <string name="popup_sync_lessons_queued">Syncing lessons</string>
    <string name="popup_sync_lessons_completed">Successfully synced lessons</string>
    <string name="popup_upload_event_queued">Uploading entry&#8230;</string>
    <string name="popup_upload_event_completed">Successfully uploaded entry</string>
    <string name="popup_delete_event_queued">Deleting entry&#8230;</string>
    <string name="hint_share_checkbox_on">Share in&#8230;</string>
    <string name="content_description_signin_icon">School1 Icon</string>
    <string name="info_feature_not_supported">This feature is unfortunately no yet implemented</string>
    <string name="info_signed_out">Signed out</string>
    <string name="about_category_contributors">Contributors</string>
    <string name="about_contributor_idea_title">Idea and developer</string>
    <string name="about_contributor_idea_summary" translatable="false">Michael Brönner</string>
    <string name="about_contributor_developer_title">Main Developer</string>
    <string name="about_contributor_developer_summary" translatable="false">Leon Höpfl</string>
    <string name="about_contributor_management_title">Management</string>
    <string name="about_contributor_management_summary" translatable="false">Benedikt Kainzbauer</string>
    <string name="about_contributor_design_title">Design</string>
    <string name="about_contributor_design_summary" translatable="false">Tim Glenz</string>
    <string name="about_category_thanks">Thanks to</string>
    <string name="about_thanks_principal_title">Principal</string>
    <string name="about_thanks_principal_summary">He is one of those modern principals to allow digitization</string>
    <string name="about_thanks_smv_title">School council</string>
    <string name="about_thanks_smv_summary">They are the ones who (probably) made it possible for you to use School1</string>
    <string name="about_thanks_support_library_title" translatable="false">Google\'s support libraries</string>
    <string name="about_thanks_support_library_summary">These Apache 2.0 licensed libraries helping us building this great app should be mentioned anywhere, even if they\'re not perfect</string>
    <string name="about_thanks_icons_title" translatable="false">www.material.io/icons</string>
    <string name="about_thanks_icons_summary">This is the site, where nearly all Android developers have got their (Apache 2 licensed) icons from, so I think, they should be mentioned here</string>
    <string name="about_category_social">Contact and support us</string>
    <string name="about_social_website">Visit our website!</string>
    <string name="about_social_email">Contact us!</string>
    <string name="about_social_rate">Give us a review!</string>
    <string name="about_social_patreon">Support us on Patreon!</string>
    <string name="about_category_version">Version</string>
    <string name="about_version_name_title">Version Name</string>
    <string name="about_version_code_title">Version Number</string>
    <string name="account_school_title">Your school</string>
</resources>