<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_account_user">
        <Preference
            android:key="userName"
            android:title="@string/hint_email_input" />
        <Preference
            android:enabled="false"
            android:summary="@string/info_feature_not_supported"
            android:title="@string/account_recover_password" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_account_school">
        <Preference
            android:key="schoolName"
            android:title="@string/account_school_title" />
        <Preference android:title="logout, stuff, needs to be implemented" />
    </PreferenceCategory>
</PreferenceScreen>