<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/primaryWhite"
        android:textSize="42sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_email_input"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_password_input"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/custom_signin_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/text_signin_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/custom_signup_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/text_signup_button"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <View
                style="@style/Divider"
                android:layout_margin="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/facebook_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_facebook"
                    android:text="@string/text_sign_in_facebook_button"
                    android:textColor="@color/primaryWhite" />

                <Button
                    android:id="@+id/google_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/common_google_signin_btn_icon_dark"
                    android:text="@string/text_sign_in_google_button"
                    android:textColor="@color/primaryWhite" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/text_sign_out_button"
                    android:textColor="@color/primaryWhite" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>