<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.SchoolLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_school_login_text_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp">

            <AutoCompleteTextView
                android:id="@+id/activity_school_login_autocomplete_text_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:completionThreshold="1"
                android:hint="@string/hint_school_name_input"
                android:imeOptions="actionGo"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/activity_school_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            tools:text="@string/message_school_sign_up" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/activity_school_login_button_login"
            style="@style/ColorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_signin_button" />
    </LinearLayout>
</ScrollView>