<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_config_item_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="4dp">

            <Spinner
                android:id="@+id/activity_config_item_spinner_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_subject_input"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp">

            <AutoCompleteTextView
                android:id="@+id/activity_config_item_edit_text_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="63" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description_input"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_config_item_edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLength="1023" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_config_item_button_date_picker"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="14dp"
            android:text="Today, Thursday, 1. January 1970" />

        <CheckBox
            android:id="@+id/activity_config_item_checkbox_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="true"
            android:text="@string/hint_share_checkbox_on" />

        <Spinner
            android:id="@+id/activity_config_item_spinner_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>


